--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -1,204 +1,196 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
+    android:background="#000000"
+    android:padding="2sp"
     tools:context=".BoardFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal">
 
-    <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="#000000"
-        android:padding="2sp">
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal">
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+    </TableRow>
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal">
 
-        </TableRow>
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal">
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+    </TableRow>
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal">
 
-        </TableRow>
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal">
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+    </TableRow>
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal">
 
-        </TableRow>
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal">
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+    </TableRow>
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal">
 
-        </TableRow>
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal">
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+        <TextView
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF" />
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
+    </TableRow>
 
-            <TextView
-                android:layout_width="@dimen/board_tile_size"
-                android:layout_height="@dimen/board_tile_size"
-                android:layout_margin="1sp"
-                android:background="#FFFFFF" />
-
-        </TableRow>
-
-    </TableLayout>
-
-</FrameLayout>
+</TableLayout>
