History Recycler -Created HistoryItem class to hold history data for games -Added functionality to test history recycler in HistoryActivity -Changed some theme styling

--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -110,8 +110,7 @@
                 android:name="com.example.crossdle.BoardFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                tools:layout="@layout/fragment_board" />
+                android:layout_gravity="center" />
         </FrameLayout>
     </LinearLayout>
 
