Board Layout -Board layout can now be generated on BoardFragment by passing in a Board -Created board class which contains the cell data -Updated board layout to be of size 6 -Added test board layout data for GameActivity -Unable to fix issue of only one BoardFragment rendering on HistoryActivity for now...

--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -107,10 +107,10 @@
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/historyItem_fragmentView_preview"
-                android:name="com.example.crossdle.BoardFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                tools:layout="@layout/fragment_board"/>
         </FrameLayout>
     </LinearLayout>
 
