--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -24,6 +24,7 @@
         android:paddingTop="42dp"
         android:text="@string/game_heading_daily"
         android:textAlignment="gravity"
+        android:textColor="@color/black"
         android:textSize="32sp" />
 
     <FrameLayout
@@ -33,7 +34,6 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/game_fragmentView_board"
-            android:name="com.example.crossdle.BoardFragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
