--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -14,34 +14,70 @@
         android:gravity="center_horizontal">
 
         <TextView
+            android:id="@+id/board_cell_0_0"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_1_0"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_2_0"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_3_0"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_4_0"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/board_cell_5_0"
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
     </TableRow>
 
@@ -51,34 +87,70 @@
         android:gravity="center_horizontal">
 
         <TextView
+            android:id="@+id/board_cell_0_1"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_1_1"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_2_1"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_3_1"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_4_1"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/board_cell_5_1"
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
     </TableRow>
 
@@ -88,34 +160,70 @@
         android:gravity="center_horizontal">
 
         <TextView
+            android:id="@+id/board_cell_0_2"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_1_2"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_2_2"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_3_2"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_4_2"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/board_cell_5_2"
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
     </TableRow>
 
@@ -125,34 +233,70 @@
         android:gravity="center_horizontal">
 
         <TextView
+            android:id="@+id/board_cell_0_3"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_1_3"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_2_3"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_3_3"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_4_3"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/board_cell_5_3"
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
     </TableRow>
 
@@ -162,34 +306,143 @@
         android:gravity="center_horizontal">
 
         <TextView
+            android:id="@+id/board_cell_0_4"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_1_4"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_2_4"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/board_cell_3_4"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
 
         <TextView
+            android:id="@+id/board_cell_4_4"
             android:layout_width="@dimen/board_tile_size"
             android:layout_height="@dimen/board_tile_size"
             android:layout_margin="1dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/board_cell_5_4"
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal">
+
+        <TextView
+            android:id="@+id/board_cell_0_5"
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/board_cell_1_5"
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/board_cell_2_5"
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/board_cell_3_5"
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/board_cell_4_5"
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/board_cell_5_5"
+            android:layout_width="@dimen/board_tile_size"
+            android:layout_height="@dimen/board_tile_size"
+            android:layout_margin="1dp"
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
     </TableRow>
 
