--- a/app/src/main/res/layout/activity_finished_game.xml
+++ b/app/src/main/res/layout/activity_finished_game.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".FinishedGamePopUp">
+    tools:context=".app.popup.FinishedGamePopup">
 
     <ImageButton
         android:id="@+id/imageButton"
