--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".HelpPopUp">
+    tools:context=".app.popup.HelpPopup">
 
     <TextView
         android:id="@+id/textView5"
