History Board Display -History pager now properly displays a Board for each history item -Added active flag in Board to allow disabling input

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -25,7 +25,8 @@
         android:text="@string/game_heading_daily"
         android:textAlignment="gravity"
         android:textColor="@color/black"
-        android:textSize="32sp" />
+        android:textSize="32sp"
+        android:visibility="visible" />
 
     <FrameLayout
         android:layout_width="match_parent"
