Crossdle - Setting Button Now works and got rid of Action bars in Sign up and Setting activity.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,9 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:orientation="vertical"
-    tools:context=".app.popup.SettingsPopup">
+    tools:context=".app.popup.SettingsPopup"
+    android:background="@drawable/setting_background"
+    android:paddingBottom="10dp">
 
     <TextView
         android:id="@+id/textView"
@@ -82,12 +84,13 @@
             android:id="@+id/spinner"
             android:layout_width="372dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            tools:ignore="TouchTargetSizeCheck" />
 
     </LinearLayout>
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/button_settings_confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
